# Wireless-Intrusion-Detection

./: README.md  ideas.txt  micro_reader.py  test_mongodb.py
Python/: Controller.py  Database.py  display.py  myplot.py  myutils.py  processor.py
Python/Display/: test.py
cpp/: CMakeLists.txt  a.out  conanfile.txt  mic.c  mic.cpp  paex_record.c  recorded.raw  test.c
cpp/test/: CMakeLists.txt
project/: Database.py
src/: cmd  plot_input.py  pyaudio_test.py  sound_device.py  test_send.py  ttttest.py
